// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardStatCard > Snapshot > matches snapshot in loading state 1`] = `
<div>
  <div
    class="rounded-2xl bg-gradient-to-br from-white/[0.05] to-white/[0.02] border border-white/10 transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10 p-5"
  >
    <div
      class="animate-pulse"
    >
      <div
        class="h-10 w-10 rounded-xl bg-white/10 mb-4"
      />
      <div
        class="h-3 w-20 rounded bg-white/10 mb-3"
      />
      <div
        class="h-6 w-16 rounded bg-white/10"
      />
    </div>
  </div>
</div>
`;

exports[`DashboardStatCard > Snapshot > matches snapshot with all props 1`] = `
<div
  tabindex="0"
>
  <div
    class="rounded-2xl bg-gradient-to-br from-white/[0.05] to-white/[0.02] border border-white/10 transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10 p-5 group cursor-pointer custom"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <div
        class="p-2.5 rounded-xl bg-blue-100 ring-1 ring-primary/20"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trending-up h-5 w-5 text-blue-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7h6v6"
          />
          <path
            d="m22 7-8.5 8.5-5-5L2 17"
          />
        </svg>
      </div>
      <div
        class="flex items-center gap-1 text-xs font-medium px-2 py-1 rounded-full text-emerald-400 bg-emerald-500/10"
      >
        ↑
        +10%
      </div>
    </div>
    <p
      class="text-sm text-slate-400 mb-1"
    >
      完整
    </p>
    <p
      class="text-2xl font-semibold text-white tracking-tight"
    >
      100
    </p>
    <p
      class="text-xs text-slate-500 mt-1"
    >
      完整属性
    </p>
  </div>
</div>
`;

exports[`DashboardStatCard > Snapshot > matches snapshot with minimal props 1`] = `
<div>
  <div
    class="rounded-2xl bg-gradient-to-br from-white/[0.05] to-white/[0.02] border border-white/10 transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10 p-5 group"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <div
        class="p-2.5 rounded-xl bg-gradient-to-br from-primary/20 to-indigo-500/10 ring-1 ring-primary/20"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trending-up h-5 w-5 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7h6v6"
          />
          <path
            d="m22 7-8.5 8.5-5-5L2 17"
          />
        </svg>
      </div>
    </div>
    <p
      class="text-sm text-slate-400 mb-1"
    >
      最小
    </p>
    <p
      class="text-2xl font-semibold text-white tracking-tight"
    >
      100
    </p>
  </div>
</div>
`;
